lily-parser/tests/snapshots/parser_tests__top_level_1.snap
---
source: lily-parser/tests/parser_tests.rs
expression: parse_top_level(source)
---
Err(
    Internal error: Unknown operator binding power!. This incident should be reported!,
)
