lily-parser/tests/snapshots/parser_tests__top_level_2.snap
---
source: lily-parser/tests/parser_tests.rs
expression: parse_top_level(source)
---
Ok(
    Module {
        declarations: [
            Declaration {
                begin: 56,
                end: 89,
                kind: ValueDeclaration(
                    "example",
                    [],
                    Expression {
                        begin: 66,
                        end: 89,
                        kind: BinaryOperator(
                            Expression {
                                begin: 66,
                                end: 81,
                                kind: BinaryOperator(
                                    Expression {
                                        begin: 66,
                                        end: 67,
                                        kind: Variable(
                                            "a",
                                        ),
                                    },
                                    "+",
                                    Expression {
                                        begin: 70,
                                        end: 81,
                                        kind: BinaryOperator(
                                            Expression {
                                                begin: 70,
                                                end: 71,
                                                kind: Variable(
                                                    "b",
                                                ),
                                            },
                                            "*",
                                            Expression {
                                                begin: 74,
                                                end: 81,
                                                kind: Parenthesized(
                                                    Expression {
                                                        begin: 75,
                                                        end: 80,
                                                        kind: BinaryOperator(
                                                            Expression {
                                                                begin: 75,
                                                                end: 76,
                                                                kind: Variable(
                                                                    "c",
                                                                ),
                                                            },
                                                            "+",
                                                            Expression {
                                                                begin: 79,
                                                                end: 80,
                                                                kind: Variable(
                                                                    "d",
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                            "+",
                            Expression {
                                begin: 84,
                                end: 89,
                                kind: BinaryOperator(
                                    Expression {
                                        begin: 84,
                                        end: 85,
                                        kind: Variable(
                                            "e",
                                        ),
                                    },
                                    "^",
                                    Expression {
                                        begin: 88,
                                        end: 89,
                                        kind: Variable(
                                            "f",
                                        ),
                                    },
                                ),
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
